<resources>

    <string name="app_name"><b>Box Ready</b></string>
    <string name="action_settings">Settings</string>
    <string name="upgrade_button">Upgrade</string>
    
    <string name="app_id">1</string>
    <string name="get_permissions">Permission to post is not granted. Please reload app and try again.</string>
    <string name="explAdId">2</string>
    <string name="selAdId">3</string>
    <string name="termAdId">4</string>
    <string name="congatsAdId">5</string>
    <string name="logAdId">6</string>
    <string name="deviceId">7</string>

    <!-- How To -->
    <!-- XXXXXXXXXXXXXXXXXXXXXXXX -->
    <string name="dismiss_button"><b>Continue</b></string>

    <!-- Registration -->
    <!-- XXXXXXXXXXXXXXXXXXXXXXXX -->
    <string name="reg_name"><b>    Welcome to Box Ready</b></string>
    <string name="registration_title"><i><b>Let\'s Get Started !</b></i></string>
    <string name="sex"><b>Sex:</b></string>
    <string name="male_radio_button">Male</string>
    <string name="female_radio_button">Female</string>
    <string name="low_button">Under 35</string>
    <string name="mid_button"> 35 to 55 </string>
    <string name="high_button"> Over  55 </string>
    <string name="age"><b>Age:</b></string>
    <string name="edit_age">    -Enter Your Age-    </string>
    <string name="fitness_level"><b>Fitness Level:</b></string>
    <string name="fitness_level_before_selection">- Select Fitness Level -</string>
    <string name="profile"><b><u>    My  Profile    </u></b></string>
    <string name="spinner_prompt"><b>- Select One -</b></string>

    <string-array name="fitness_level_spinner_array">
        <item>- Out of Shape -</item>
        <item>- Average Shape -</item>
        <item>- In Shape -</item>
    </string-array>

    <string name="fitness_level_prompt">-Estimate Your Fitness Level-</string>
    <string name="quote"><i>Don\'t wish for it, work for it!</i></string>
    <string name="finalize_reg_info"><b>Submit</b></string>
    <string name="box_ready_name"><b>Box Ready</b></string>
    <string name="link"><i>Contact Us At:  \nwww.DiligenceDojo.com</i></string>

    <!-- Explanation -->
    <!-- XXXXXXXXXXXXXXXXXXXXXXX -->
    <string name="app_explanation"><b>    How To Use Box Ready</b></string>
    <string name="expl_wod_title"><b>Workout of the Day</b></string>
    <string name="start"><b>Start</b></string>
    <string name="back"><b>Hide</b></string>
    <string name="todays_wod"><b>Workout:  </b></string>
    <string name="num_moves"><b>Number of Movements:  </b></string>
    <string name="week"><b>Week: </b></string>
    <string name="week_number">1</string>
    <string name="workout"><b>Workout: </b></string>
    <string name="workout_number">1</string>
    <string name="skip_to_wod"><b>Build Workout</b></string>
    <string name="to_log_button"><b>View Log</b></string>
    <string name="skill_button"><b>Skill Work</b></string>
    <string name="terminology_button"><b>Terms</b></string>
    <string name="done_dialog_title"><b>You are Box Ready!</b></string>
    <string name="done_dialog_msg">Congratulations!  You have completed all 24 workouts!</string>
    <string name="upgrade_dialog_title"><b>Trial Period Ended</b></string>
    <string name="upgrade_dialog_msg">Would you like to upgrade now?\n</string>
    <string name="disuse_dialog_title"><b>Start Over?</b></string>
    <string name="disuse_dialog_msg">You may have lost some gains since your last workout, please consider starting over.</string>
    <string name="random_button">Random</string>
    <string name="wods_left">WOD\'s Left!</string>

    <!-- Movement Selection -->
    <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
    <string name="mv_select_action_bar"><b> Select Movements For Workout</b></string>

    <!-- Workout of the Day -->
    <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
    <string name="movement_title"><u><b>\tW</b></u>orkout    <u><b>O</b></u>f     the    <u><b>D</b></u>ay</string>
    <string name="movement_title_two"><b><u>W</u>ORKOUT\t  <u>O</u>F\tTHE\t  <u>D</u>AY</b></string>
    <string name="explain_button"><i>Expand</i></string>
    <string name="movement"><b>Movement:  </b></string>
    <string name="reps"><b>\tReps:  </b></string>
    <string name="skill"><b>\tSkill:  </b></string>
    <string name="distance"><b>\tDistance:  </b></string>
    <string name="add_move"><b>Press back to add another movement</b></string>
    <string name="timerVal">00:00:0</string>
    <!-- WOD Buttons -->
    <string name="about_movement"><b>Video</b></string>
    <string name="delete_move"><b><i>Remove</i></b></string>
    <string name="finalize_wod"><b>I\'m ready to workout</b></string>
    <string name="endWodButtonLabel"><b>Stop the Clock</b></string>
    <string name="startButtonLabel"><b>Start the Clock</b></string>
    <string name="save_wod_button"><b>Submit Results</b></string>
    <string name="back_to_congrats_button"><b>Back to Congrats</b></string>
    <string name="enter_score">-Enter Your Score-</string>
    <string name="buttercup_title"><b>Buttercup ?</b></string>
    <string name="buttercup_msg">If you feel like you can\'t do the workout as prescribed, this will let you do half instead.</string>
    <!-- Unused -->
    <string name="congrats">Congratulations! Today\'s workout\n is complete!</string>

    <!-- Demonstration Video -->
    <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX -->
    <string name="demo_vid_action_bar"><b>    Video Demonstration</b></string>
    <string name="demo_play">Play</string>
    <string name="demo_stop">Stop</string>

    <!-- Congratulations -->
    <!-- XXXXXXXXXXXXXXXXXXXXXXXXXXX -->
    <string name="your_score_is">Your score is: </string>
    <string name="log_workout">View Log</string>
    <string name="cancel"><b>Cancel</b></string>
    <string name="social_button">Twitter</string>
    <string name="contact_button">Contact Us</string>
    <string name="share_tweet_button">Tweet My Results</string>
    <string name="facebook_button"><b>Facebook</b></string>
    <string name="twitter_button"><b>Twitter</b></string>
    <string name="facebook_ok_button"><b>Push to Post</b></string>
    <string name="twitter_ok_button"><b>Push to Post</b></string>
    <string name="share"><b>Share</b></string>
    <string name="bad_login">Unable to Login<b></b></string>
    <string name="mail_hint"><i>Type email here...</i></string>
    <string name="send_button">Send Email</string>
    <string name="mail_action_title"><b>  Contact Us</b></string>

    <!-- Colors -->
    <!-- XXXXXXXXXXXXXXXXXX -->
    <color name="green">#00FF00</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="light_black">#101010</color>
    <color name="dark_gray">#303030</color>
    <color name="xtra_dark_blue">#1A6FA4</color>
    <color name="orange">#FFA114</color>
    <color name="dark_blue">#0F0CE8</color>
    <color name="med_blue">#007ACC</color>
    <color name="silver">#C2D6D6</color>
    <color name="blue">#66FFFF</color>
    <color name="red">#FF0000</color>
    <color name="clear">#0000</color>
    <color name="clear_gray">#DD000000</color>

</resources>