<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/movement_list_item_name"
        android:name="@string/reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:paddingLeft="8dp"
        android:paddingTop="2dp"
        android:shadowColor="@color/black"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="2.0"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/movement_list_item_reps"
        android:name="@string/movement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/movement_list_item_name"
        android:paddingBottom="2dp"
        android:paddingLeft="8dp"
        android:shadowColor="@color/black"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="2.0"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnViewAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@color/clear"
        android:shadowColor="@color/black"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="2.0"
        android:text="@string/about_movement"
        android:textColor="@color/green"
        android:textSize="18sp" />

</RelativeLayout>
