<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gray_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/congrats_home_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/congrats"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/congrats_title" />

        <TextView
            android:id="@+id/timerValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/timerVal"
            android:textColor="@color/green"
            android:textSize="68sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <Button
                android:id="@+id/social_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/clear"
                android:text="@string/social_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/share_tweet_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/clear"
                android:text="@string/share_tweet_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic"
                android:visibility="gone" />

            <Button
                android:id="@+id/log_workout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/clear"
                android:text="@string/log_workout"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/contact_us_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@color/clear"
                android:text="@string/contact_button"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <Button
            android:id="@+id/fireworks_one"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:background="@color/clear"
            android:visibility="gone" />

        <Button
            android:id="@+id/fireworks_two"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:background="@color/clear"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/congrats_ad_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/congrats_home_layout"
        android:layout_alignParentBottom="true"
        android:gravity="bottom" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/congratsAdView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/congatsAdId" />
    </LinearLayout>

</RelativeLayout>