<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wod_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gray_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/wod_type_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/black_button" >

        <TextView
            android:id="@+id/wod_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingBottom="6dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="6dp"
            android:shadowColor="@color/black"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="2.0"
            android:textColor="@color/green"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/wod_explanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/explain_button"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:shadowColor="@color/black"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="2.0"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/explain_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/clear"
            android:paddingRight="8dp"
            android:shadowColor="@color/green"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="0.5"
            android:text="@string/explain_button"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/wodList_list_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ListView
                    android:id="@android:id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/delete_move"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:background="@color/clear"
                    android:shadowColor="@color/black"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="2.0"
                    android:text="@string/delete_move"
                    android:textColor="@color/green" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/timer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wodList_list_layout"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/timerValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:maxLines="1"
                    android:shadowColor="@color/black"
                    android:shadowDx="0.0"
                    android:shadowDy="0.0"
                    android:shadowRadius="2.0"
                    android:text="@string/timerVal"
                    android:textColor="@color/green"
                    android:textSize="82sp"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/finalize_wod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/silver_button_background"
                android:text="@string/finalize_wod"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/green_shaded_button_background"
                android:text="@string/startButtonLabel"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/enter_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wodList_list_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:hint="@string/enter_score"
                android:inputType="number"
                android:maxLength="3"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="32sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/endWodButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/silver_button_background"
                android:text="@string/endWodButtonLabel"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/screenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name" />

            <Button
                android:id="@+id/save_wod_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/wodList_list_layout"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/silver_button_background"
                android:text="@string/save_wod_button"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/score_entered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/wodList_list_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:descendantFocusability="beforeDescendants"
                android:focusable="true"
                android:maxLines="1"
                android:shadowColor="@color/black"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="2.0"
                android:textAlignment="center"
                android:textColor="@color/green"
                android:textSize="82sp"
                android:visibility="gone" />

            <Button
                android:id="@+id/back_to_congrats_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/silver_button_background"
                android:text="@string/back_to_congrats_button"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/add_move"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:shadowColor="@color/black"
                android:shadowDx="0.0"
                android:shadowDy="0.0"
                android:shadowRadius="10.0"
                android:text="@string/add_move"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/countdown_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@color/black"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="2.0"
            android:text="@string/timerVal"
            android:textColor="@color/black"
            android:textSize="300sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </FrameLayout>

</LinearLayout>