<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dark_gray_background" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="top|center_vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/wod_title" />

        <TextView
            android:id="@+id/todays_wod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_vertical"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="45dp"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/wods_left"
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginBottom="60dp"
            android:gravity="center" />

        <ImageView
            android:id="@+id/wods_left_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:background="@drawable/wods_left"
            android:gravity="center" />

        <ImageView
            android:id="@+id/last_wod"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="44dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/last_rockwell_white"
            android:gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/expl_ad_layout"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/to_log_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:background="@color/clear"
            android:text="@string/to_log_button"
            android:textColor="@color/white"
            android:textStyle="italic" />

        <Button
            android:id="@+id/terminology_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_weight="1"
            android:background="@color/clear"
            android:text="@string/terminology_button"
            android:textColor="@color/white"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expl_ad_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/skip_to_wod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/green_shaded_button_background"
            android:text="@string/skip_to_wod"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/explAdView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/explAdId" />
    </LinearLayout>

</RelativeLayout>